try to fix flicker

--- a/src/index.css
+++ b/src/index.css
@@ -406,6 +406,9 @@ p {
 }
 
 .hero {
+  background: var(--hero) center center;
+  background-size: cover;
+  background-repeat: no-repeat;
   position: relative;
   min-height: 600px;
   margin-top: -5rem;
